--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
   max-width: 1220px;
   margin: 0 auto;
   }
-  .menu {
+.izvelne{
       max-width: 1220px;
       height: 152px;
       padding: 10px 20px 0 20px;
@@ -18,11 +18,6 @@ body{
     margin-top: 5px;
     background: white;
     min-height: 800px;
-}
-.Kategorijas{
-  background:white;
-  position: absolute;
-
 }
 .mainmenu{
   overflow-y: auto;
@@ -49,20 +44,6 @@ body{
 .main_menu_item:nth-child(1){
     padding-left: 5px;
     border-left: 0;
-}
-.second_menu_item {
-    display: inline;
-    font-size: 14px;
-    padding-left: 10px;
-    margin-right: 10px;
-}
-.second_menu_item:nth-child(1){
-  border-left:none;
-  font-weight: 500;
-}
-.second_menu_item:hover{
-  text-decoration: underline;
-}
 .elements {
     margin: 5px;
     position: relative;
@@ -73,254 +54,5 @@ ul
     padding: 10px;
     margin: 0;
 }
-.temas_tops {
-    position: relative;
-    object-fit: fill;
-    height: 200px;
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(255, 255, 255, 0.73)), url(https://media.radissonhotels.net/image/Destination-Pages/Localattraction/16256-118729-f63223068_3XL.jpg);
-    text-align: center;
-}
-.kategorija_item {
-    display: inline-grid;
-    border: 1px solid grey;
-    padding: 5px 10px;
-    margin-right: 5px;
-    font-size: 16px;
-}
-  .elements_item {
-      min-width: 190px;
-      background:white;
-      width: 19%;
-      float: left;
-      position: relative;
-      margin: 5px;
-      border: 1px solid #f1f1f1;
-  }
-  .Kategorijas {
-      height: 43px;
-      background: white;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-  }
-  .element_info {
-      min-height: 155px;
-      position: relative;
-      padding: 0 10px 10px 10px;
-  }
-.picture {
-    width: 100%;
-    padding: 10px;
-    height: 170px;
-}
-.element_kategorija {
-    font-size: 14px;
-}
-.vh2 {
-    font-size: 1.3rem;
-    padding: 5px 0;
-}
-.virsraksts {
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    padding: 5px 0;
-}
-.pavadteksts {
-    font-size: 0.9rem;
-}
-.pievienot {
-    padding: 5px 10px 5px 10px;
-    font-size: 16px;
-    background: #f6cc05;
-    position: absolute;
-    right: 25px;
-    bottom: 5px;
-}
-.poga {
-    width: 90%;
-    background: #424242;
-    color: white;
-    padding: 5px;
-    text-align: center;
-    position: absolute;
-    bottom: 10px;
-}
-.poga:hover{
-  background: #f5cc05;
-  color: black;
-}
-.Pievienot {
-    position: absolute;
-    bottom: 10px;
-    right: 115px;
-}
-#poga {
-    display: inline-block;
-    background: #424242;
-    height: 36px;
-    color: white;
-    width: 36px;
-    padding-top: 4px;
-    padding-left: 7px;
-    border-radius: 35px;
-    vertical-align: middle;
-}
-#pievienot_teksts {
-    font-size: 20px;
-    vertical-align: middle;
-}
-#pluss {
-    font-size: 35px;
-    vertical-align: middle;
-    font-weight: 400;
-    line-height: 0px;
-    text-align: center;
-}
-.uzruna {
-    height: 325px;
-    margin: 6px;
-    padding-right: 1px;
-    width: 38.7%;
-    float: left;
-    position: relative;
-}
-.uzruna_items {
-    padding: 30px;
-    bottom: 60px;
-    position: absolute;
-}
-#uzruna2 {
-    padding-left: 5px;
-    font-size: 33px;
-    border-bottom: 3px solid #f5cc05;
-}
-#uzruna3 {
-    width: 90%;
-    font-size: 18px;
-    padding: 5px;
-}
-@media only screen and (max-width: 1013px) {
-  .mainmenu, .second_menu{
-    display: none;
-  }
-  .uzruna {
-    height: 325px;
-      width: 61%;
-      position: relative;
-  }
-  .uzruna_items {
-      position: absolute;
-      top: 1;
-  }
-
-.elements_item {
-    min-width: 196px;
-    background: white;
-    width: 30%;
-  }
-  .Pievienot {
-    padding-left: 50px;}
-
-#uzruna3 {
-    font-size: 20px;
-}
-#uzruna2 {
-    font-size: 30px;
-}
-}
-@media only screen and (max-width: 700px) {
-  .uzruna {
-      max-height: 139px;
-      width: 100%;
-      position: relative;
-      padding: 0;
-      margin: 0;
-  }
-.Pievienot{
-  display: none;
-}
-.uzruna_items {
-    padding: 0 26px;
-    bottom: 15px;
-    position: absolute;
-}
-.elements_item {
-    width: 47%;
-  }
-#uzruna3 {
-    font-size: 14px;
-}
-#uzruna2 {
-    font-size: 27px;
-}
-.menu{
-height: auto;}
-}
-
-/* testejam pogas */
-
-.button {
-  font-size: 1em;
-  padding: 10px;
-  border-radius: 20px/50px;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
-.popup {
-    margin: 70px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 10px;
-    width: 50%;
-    position: relative;
-}
-.popup h2 {
-  margin-top: 0;
-  color: #333;
-  font-family: Tahoma, Arial, sans-serif;
-}
-.popup .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  transition: all 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #333;
-}
-.popup .close:hover {
-  color: #06D85F;
-}
-.popup .content {
-  max-height: 30%;
-  overflow: auto;
-}
-
-@media screen and (max-width: 700px){
-  .box{
-    width: 70%;
-  }
-  .popup{
-    width: 70%;
-  }
-}
-.pogtests{
-  position: relative;
-  clear:both;
-}
+@media only screen and (max-width: 1013px) {}
+@media only screen and (max-width: 700px) {}
