--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@ body{
   margin: 0 auto;
   }
 .izvelne{
-      max-width: 1220px;
+  background-color: #2c2c2c;
+      max-width: 1180px;
       height: 152px;
       padding: 10px 20px 0 20px;
-      background: white;
+      color:white;
   }
 .saturs {
     margin-top: 5px;
