--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
     display: inline;
     font-size: 18px;
     padding-left: 7px;
-    border-left: 1px solid #f6cc05;
+    border-left: 1px solid #ffffff;
     margin-right: 3px;
 }
 .main_menu_item:nth-child(1){
