--- a/css/style.css
+++ b/css/style.css
@@ -39,5 +39,9 @@ ul
     background: white;
     min-height: 800px;
 }
+.sleja{
+  max-width: 890px;
+  padding-right: 30px;
+}
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
