--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,31 @@ ul
     padding: 10px;
     margin: 0;
 }
-.saturs {
+.informacija {
     margin-top: 5px;
     background: white;
     min-height: 800px;
+    border:1px solid grey;
+    padding:1px;
+    margin:1px;
 }
 .sleja{
   max-width: 890px;
   padding-right: 30px;
+  border:1px solid grey;
+  padding:1px;
+  margin:1px;
+}
+.raksts{
+  border:1px solid grey;
+  padding:1px;
+  margin:1px;
+}
+.sidebar{
+  width:300px;
+  border:1px solid grey;
+  padding:1px;
+  margin:1px;
 }
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
