--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,13 @@ body{
       height: 152px;
       padding: 10px 20px 0 20px;
       color:white;
+      position: relative;
   }
-.main_menu {
-  padding-left:10px;
-}
+  .main_menu {
+      padding-left: 10px;
+      position: absolute;
+      bottom: 0;
+  }
 .main_menu_item {
     display: inline;
     font-size: 18px;
