--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,11 @@ ul
     padding: 10px;
     margin: 0;
 }
-.informacija {
-    margin-top: 5px;
-    background: white;
-    min-height: 800px;
-    border:1px solid grey;
-    padding:1px;
-    margin:1px;
-}
+.saturs {
+      width: 1220px;
+      height: 900px;
+      margin: 0 auto;
+  }
 .sleja{
   max-width: 890px;
   padding-right: 30px;
