--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,16 @@ body{
   }
 #header{
       background: #2c2c2c;
+      width:100%;
+
   }
   .izvelne{
         max-width: 1180px;
-        height: 152px;
+        height: 252px;
         padding: 10px 20px 0 20px;
         color:white;
         position: relative;
+          margin: 0 auto;
     }
   .main_menu {
       padding-left: 10px;
