--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ body{
       width:100%;
   }
 .izvelne{
-        max-width: 1180px;
+        max-width: 1220px;
         height: 252px;
-        padding: 10px 20px 0 20px;
+        padding: 10px 20px;
         color:white;
         position: relative;
         margin: 0 auto;
