--- a/css/style.css
+++ b/css/style.css
@@ -84,5 +84,12 @@ ul {
     width: 30%;
     padding: 1px;
 }
+.raksta_virsraksts{
+  height:200px;
+}
+#coverimage{
+  height:150px;
+  object-fit: cover;
+}
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
