--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ ul {
   height:200px;
 }
 #coverimage{
-  height:150px;
+  height:100%;
   object-fit: cover;
 }
 @media only screen and (max-width: 1013px) {}
