--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,8 @@ ul {
   height:200px;
 }
 #coverimage{
-  height:100%;
+  height:200px;
+  width: 100%;
   object-fit: cover;
 }
 @media only screen and (max-width: 1013px) {}
