--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,15 @@
     object-fit: cover;
 }
 html{
-  background:   whitesmoke;}
-  body{
+  background:   whitesmoke;
+}
+body{
     margin:0;
     padding:0;
   }
+img{
+  object-fit: cover; 
+}
   #logo {
       width: 300px;
       filter: invert(1);
