--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ ul {
 }
 .produkts{
   width: 33%;
+  padding: 5px;
 }
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
