--- a/css/style.css
+++ b/css/style.css
@@ -94,5 +94,12 @@ ul {
     padding: 5px;
     margin: auto 0;
 }
+.poga{
+  background:black;
+  color:white;
+  padding: 2px 10px;
+  margin:10px;
+  width: 80%;
+}
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
