--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,10 @@ ul {
     margin: auto 0;
 }
 .poga{
+  text-align: center;
   background:black;
   color:white;
-  padding: 2px 10px;
+  padding: 2px 5px;
   margin:10px;
   width: 80%;
 }
