--- a/css/style.css
+++ b/css/style.css
@@ -102,5 +102,7 @@ ul {
   margin:10px;
   width: 80%;
 }
+.cena{font-size: 25px;
+}
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
