--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@ html{
 img{
   object-fit: cover;
 }
-h2{
-  font-size:14px;
+h2 {
+    font-size: 20px;
+    font-weight: 300;
+    padding: 5px;
 }
 p{
     padding: 10px 0;
