--- a/css/style.css
+++ b/css/style.css
@@ -114,5 +114,17 @@ ul {
 }
 .vērtība{font-size: 25px;
 }
+#topic{
+    background: black;
+    color: white;
+    margin: 0 10px 0 0;
+    padding: 2px 4px;
+}
+#date{
+  padding:5px;
+}
+#autor{
+  padding:4px;
+}
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
