--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,12 @@ ul {
     padding: 10px 0;
     margin: 0;
 }
-.saturs {
-      width: 1220px;
-      height: 900px;
-      margin: 0 auto;
-  }
+.raksta_saturs {
+    height: 2000px;
+    width: 70%;
+    padding-right: 3%;
+    float: left;
+}
 .sleja{
   max-width: 890px;
   padding-right: 30px;
