--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ html{
 img{
   object-fit: cover;
 }
+h1{
+    font-size: 35px;
+    font-weight: 400;
+    padding: 10px 0;
+}
 h2 {
     font-size: 20px;
     font-weight: 300;
