--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ ul {
 }
 #autor{
   padding:4px;
+  font-weight: 500;
 }
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {}
