--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ ul {
     margin: 1px;
     float: left;
     padding-left: 30px;
+    width: 300px;
 }
 .raksta_virsraksts {
     padding-bottom: 10px;
