--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,10 @@ ul {
 }
 .vērtība{font-size: 25px;
 }
+.reklama-side{
+  position: absolute;
+  top: 0;
+}
 #topic{
     background: black;
     color: white;
