--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ ul {
 .reklama_side{
   position: absolute;
   top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 #topic{
     background: black;
