--- a/css/style.css
+++ b/css/style.css
@@ -125,12 +125,9 @@ ul {
 }
 .vērtība{font-size: 25px;
 }
-.reklama_side{
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+.reklama_side {
+  position: sticky;
+  top: 10px;
 }
 #topic{
     background: black;
