--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ ul {
     float: left;
     margin-left: 30px;
     width: 300px;
-    height: 100%;
+    height: 1822px;
 }
 .raksta_virsraksts {
     padding-bottom: 10px;
