--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ p{
     padding-left: 0;
     border-left: 0;
 }
+.main_menu_item:hover{
+  text-decoration: underline;
+}
 ul {
     padding: 10px 0;
     margin: 0;
