--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ p{
       position: absolute;
       bottom: 0;
   }
+  .bilde{
+    height: 200px;
+    overflow: hidden;
+    object-position: center;
+  }
   .main_menu_item {
       display: inline;
       font-size: 18px;
@@ -146,4 +151,8 @@ ul {
   font-weight: 500;
 }
 @media only screen and (max-width: 1013px) {}
-@media only screen and (max-width: 700px) {}
+@media only screen and (max-width: 700px) {
+  .sidebar {  display: none;}
+    .sleja {    padding: 20px;}
+
+}
