--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,10 @@ ul {
 }
 @media only screen and (max-width: 1013px) {}
 @media only screen and (max-width: 700px) {
-  .sidebar {  display: none;}
-    .sleja {  padding: 20px;}
+  .sidebar {
+    display: none;}
+    .sleja {
+      padding: 20px;
+      max-width: 100%;
+      }
 }
