--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p{
     padding: 10px 0;
 }
   #logo {
-      width: 300px;
+      width: 40%;
       filter: invert(1);
       padding-top: 40px;
   }
