--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,20 @@ ul {
   padding:4px;
   font-weight: 500;
 }
-@media only screen and (max-width: 1013px) {}
+@media only screen and (max-width: 1013px) {
+  .saturs{width: 100%;}
+    .sidebar {
+      display: none;}
+      .sleja {
+        padding: 20px;
+        max-width: 100%;
+        }
+}
 @media only screen and (max-width: 700px) {
 .saturs{width: 100%;}
   .sidebar {
     display: none;}
+    .raksta_sidebar {display: none;}
     .sleja {
       padding: 20px;
       max-width: 100%;
