--- a/css/style.css
+++ b/css/style.css
@@ -162,12 +162,25 @@ ul {
         }
 }
 @media only screen and (max-width: 700px) {
-.saturs{width: 100%;}
+  #logo {
+    width: 70%;
+    filter: invert(1);
+    padding-top: 40px;
+}
+.saturs{
+  width: 100%;
+}
   .sidebar {
     display: none;}
-    .raksta_sidebar {display: none;}
+    .raksta_sidebar {
+      display: none;
+    }
     .sleja {
       padding: 20px;
       max-width: 100%;
       }
+      .raksta_saturs {
+    width: 100%;
+    padding: 0;
+}
 }
