--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p{
     padding: 10px 0;
 }
   #logo {
-      width: 40%;
+      width: 200px;
       filter: invert(1);
       padding-top: 40px;
   }
@@ -44,7 +44,7 @@ p{
         margin: 0 auto;
     }
     .main_menu {
-        width: 100%;
+        width: 90%;
         overflow-y: auto;
         white-space: nowrap;
         padding-left: 10px;
