--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ p{
       margin-bottom: 10px;
   }
 .izvelne{
-        max-width: 100%;
+        width: 1220px;
         height: 130px;
         padding: 10px 20px;
         color:white;
