--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,11 @@ ul {
   #logo {
     width: 70%;
     filter: invert(1);
-    padding-top: 40px;
+    padding-top: 10px;
 }
+.izvelne {
+    width: 100%;
+    height: 125px;}
 .saturs{
   width: 100%;
 }
@@ -194,4 +197,9 @@ h1 {
     font-weight: 400;
     padding: 10px 0;
 }
+.main_menu {
+    width: 90%;
+    overflow-y: auto;
+    white-space: nowrap;
+    padding-left: 0;
 }
