--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,13 @@ ul {
     overflow: hidden;
     object-position: center;
 }
+.izvelne {
+    width: 100%;
+    height: 125px;}
+    .sleja {
+    max-width: 880px;}
+    .saturs {
+    padding: 5px;}
 }
 @media only screen and (max-width: 700px) {
   #logo {
