--- a/css/style.css
+++ b/css/style.css
@@ -156,14 +156,19 @@ ul {
   font-weight: 500;
 }
 @media only screen and (max-width: 1013px) {
-  .saturs{width: 100%;}
-    .sidebar {
-      display: none;}
-      .sleja {
+.saturs{width: 100%;
+}
+.sidebar {
+      display: none;
+}
+.sleja {
         padding: 20px;
         max-width: 100%;
         }
-        .bilde {
+  .saturs {
+    width: 100%;
+    height: 1600px;}
+.bilde {
     height: 700px;
     overflow: hidden;
     object-position: center;
